# Pactum

./: .gitignore  LICENSE  README.md  pactum.yaml  pyproject.toml
docs/api/: python.md
docs/cli/: reference.md
docs/concepts/: contracts.md  runtime.md  snapshots.md
examples/rag-app/: contract.py
examples/rag-app/fixtures/: question.json
examples/rag-app/tests/: test_rag.py
examples/support-bot/: contract.py
examples/support-bot/fixtures/: query.json
examples/support-bot/tests/: test_support.py
pactum/: __init__.py
pactum/cli/: __init__.py  helpers.py  main.py
pactum/core/: __init__.py  context.py  contract.py  exceptions.py  runtime.py  tracer.py  validator.py
pactum/plugins/: __init__.py  base.py  llm_adapter.py  memory_backend.py  tool_adapter.py
pactum/snapshot/: __init__.py  store.py
pactum/testing/: __init__.py  harness.py
tests/: test_cli.py  test_contract.py  test_integration.py  test_plugins.py  test_runtime.py  test_snapshot.py  test_validator.py
